<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/crop1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/roundedback"
        android:layout_height="105dp">

        <ImageView
            android:id="@+id/imagecrop1"
            android:layout_width="120dp"
            android:layout_margin="5dp"
            android:layout_gravity="start"
            android:src="@drawable/index"
            android:layout_height="98dp"/>
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/croptomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tomato"
                android:textSize="20sp"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/crop2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/roundedback"
        android:layout_height="105dp">
        <ImageView
            android:id="@+id/imagecrop2"
            android:layout_width="120dp"
            android:layout_margin="2dp"
            android:src="@drawable/cabbage"
            android:layout_height="98dp"/>
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
        android:id="@+id/Cabbage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cabbage"
            android:textSize="20sp"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/crop3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/roundedback"
        android:layout_height="105dp">
        <ImageView
            android:id="@+id/imagecrop3"
            android:layout_width="120dp"
            android:layout_margin="2dp"
            android:src="@drawable/onions"
            android:layout_height="98dp"/>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
        android:id="@+id/cropOnion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/onion"
        android:textSize="20sp"/>
        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/crop4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/roundedback"
        android:layout_height="105dp">
        <ImageView
            android:id="@+id/imagecrop4"
            android:layout_width="120dp"
            android:layout_margin="2dp"
            android:src="@drawable/kales"
            android:layout_height="98dp"/>
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/cropsukuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sukuma"
            android:textSize="20sp"/>
        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/crop5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/roundedback"
        android:layout_height="105dp">
        <ImageView
            android:id="@+id/imagecrop5"
            android:layout_width="120dp"
            android:layout_margin="2dp"
            android:src="@drawable/carrots"
            android:layout_height="98dp"/>
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/Carrots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/carrots"
            android:textSize="20sp"/>
        </LinearLayout>

    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/crop6"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/roundedback"
            android:layout_height="105dp">
            <ImageView
                android:id="@+id/imagecrop6"
                android:layout_width="120dp"
                android:layout_margin="2dp"
                android:src="@drawable/spinach"
                android:layout_height="98dp"/>
            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_marginLeft="150dp">
            <TextView
                android:id="@+id/cropSpinach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/spinach"
                android:textSize="20sp"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>